--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="wallpaper_title">Chron</string>
+    <string name="wallpaper_title_gl">Chron GL</string>
     <string name="wallpaper_desc">A live wallpaper similar to the Chron watchface</string>
 </resources>
