--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="wallpaper_title">Chron</string>
     <string name="wallpaper_title_gl">Chron GL</string>
     <string name="wallpaper_desc">A live wallpaper similar to the Chron watchface</string>
+
+    <string name="title_no_device_connected">No wearable device is currently connected.</string>
+    <string name="ok_no_device_connected">OK</string>
 </resources>
